--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h1>Welcome To Ironhacker's Page</h1>
 
   <section>
-    <h2>Things I Like</h2>
+    <h2>Things I Like the most</h2>
     <ul>
       <li>Fill</li>
       <li>This</li>
@@ -27,7 +27,7 @@
   <section>
     <h2>Things I Don't Like</h2>
     <ul>
-      <li>Fill</li>
+      <li>Fill</li> 
       <li>This</li>
       <li>In</li>
     </ul>
